Fixed a problem where the background is too dark when the modal is overlapped

--- a/assets/stylesheets/redmine_issues_panel.css
+++ b/assets/stylesheets/redmine_issues_panel.css
@@ -115,6 +115,11 @@ table.issues-panel td {
   max-width: 90%;
 }
 
+body.controller-issues_panel .ui-widget-overlay+.ui-dialog+.ui-widget-overlay,
+body.controller-issues_panel .ui-widget-overlay+.ui-widget-overlay {
+  display: none;
+}
+
 @media screen and (max-width: 899px) {
   .issue-card-form div.splitcontentleft p {
     padding-left: 0px;
